Update to gradle 8.7

--- a/Seq2SeqNMT/app/build.gradle
+++ b/Seq2SeqNMT/app/build.gradle
@@ -22,6 +22,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'org.pytorch.demo.seq2seqnmt'
+    testNamespace 'org.pytorch.demo.objectdetection.test'
 }
 
 dependencies {
